// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField snapshots renders correctly 1`] = `
<div
  className=
      ms-TextField
      testClassName
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        box-shadow: none;
        box-sizing: border-box;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
>
  <div
    className=
        ms-TextField-wrapper

  >
    <label
      className=
          ms-Label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 600;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 0;
            padding-right: 0;
            padding-top: 5px;
            word-wrap: break-word;
          }
      htmlFor="TextField0"
      id="TextFieldLabel2"
    >
      Label
    </label>
    <div
      className=
          ms-TextField-fieldGroup
          {
            align-items: stretch;
            background: #ffffff;
            border-radius: 2px;
            border: 1px solid #8a8886;
            box-shadow: none;
            box-sizing: border-box;
            cursor: text;
            display: flex;
            flex-direction: row;
            height: 32px;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            padding-bottom: 0px;
            padding-left: 0px;
            padding-right: 0px;
            padding-top: 0px;
            position: relative;
          }
          &:hover {
            border-color: #323130;
          }
          @media screen and (-ms-high-contrast: active){&:hover {
            border-color: Highlight;
          }
    >
      <input
        aria-invalid={false}
        aria-labelledby="TextFieldLabel2"
        className=
            ms-TextField-field
            testInputClassName
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              background-color: transparent;
              background: none;
              border-radius: 0px;
              border: none;
              box-shadow: none;
              box-sizing: border-box;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              min-width: 0px;
              outline: 0px;
              padding-bottom: 0;
              padding-left: 8px;
              padding-right: 8px;
              padding-top: 0;
              text-overflow: ellipsis;
              width: 100%;
            }
            &:active {
              outline: 0px;
            }
            &:focus {
              outline: 0px;
            }
            &:hover {
              outline: 0px;
            }
            &::-ms-clear {
              display: none;
            }
            &::placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            &:-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            &::-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
        id="TextField0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField snapshots renders multiline correctly with errorMessage 1`] = `
<div
  className=
      ms-TextField
      ms-TextField--underlined
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        box-shadow: none;
        box-sizing: border-box;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
>
  <div
    className=
        ms-TextField-wrapper
        {
          border-bottom: 1px solid #a4262c;
          display: flex;
          width: 100%;
        }
        &:hover {
          border-bottom-color: #a4262c;
        }
        @media screen and (-ms-high-contrast: active){&:hover {
          border-bottom-color: Highlight;
        }
  >
    <label
      className=
          ms-Label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 600;
            height: 32px;
            line-height: 22px;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 8px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 12px;
            padding-right: 0px;
            padding-top: 5px;
            word-wrap: break-word;
          }
      htmlFor="TextField0"
      id="TextFieldLabel2"
    >
      Label
    </label>
    <div
      className=
          ms-TextField-fieldGroup
          {
            align-items: stretch;
            background: #ffffff;
            border-radius: 2px;
            border: none;
            box-shadow: none;
            box-sizing: border-box;
            cursor: text;
            display: flex;
            flex-direction: row;
            flex: 1 1 0px;
            height: 32px;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            padding-bottom: 0px;
            padding-left: 0px;
            padding-right: 0px;
            padding-top: 0px;
            position: relative;
            text-align: left;
          }
          &:hover {
            border-color: #323130;
          }
          @media screen and (-ms-high-contrast: active){&:hover {
            border-color: Highlight;
          }
    >
      <div
        className=
            ms-TextField-prefix
            {
              align-items: center;
              background: #f3f2f1;
              color: #605e5c;
              display: flex;
              flex-shrink: 0;
              line-height: 1px;
              padding-bottom: 0;
              padding-left: 10px;
              padding-right: 10px;
              padding-top: 0;
              white-space: nowrap;
            }
      >
        <span
          style={
            Object {
              "paddingBottom": "1px",
            }
          }
        >
          test prefix
        </span>
      </div>
      <input
        aria-describedby="TextFieldDescription1"
        aria-invalid={true}
        aria-labelledby="TextFieldLabel2"
        className=
            ms-TextField-field
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              background-color: transparent;
              background: none;
              border-radius: 0px;
              border: none;
              box-shadow: none;
              box-sizing: border-box;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              min-width: 0px;
              outline: 0px;
              padding-bottom: 0;
              padding-left: 8px;
              padding-right: 8px;
              padding-top: 0;
              text-align: left;
              text-overflow: ellipsis;
              width: 100%;
            }
            &:active {
              outline: 0px;
            }
            &:focus {
              outline: 0px;
            }
            &:hover {
              outline: 0px;
            }
            &::-ms-clear {
              display: none;
            }
            &::placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            &:-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            &::-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
        id="TextField0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        type="text"
        value=""
      />
      <div
        className=
            ms-TextField-suffix
            {
              align-items: center;
              background: #f3f2f1;
              color: #605e5c;
              display: flex;
              flex-shrink: 0;
              line-height: 1px;
              padding-bottom: 0;
              padding-left: 10px;
              padding-right: 10px;
              padding-top: 0;
              white-space: nowrap;
            }
      >
        <span
          style={
            Object {
              "paddingBottom": "1px",
            }
          }
        >
          test suffix
        </span>
      </div>
    </div>
  </div>
  <span
    id="TextFieldDescription1"
  >
    <div
      role="alert"
    />
  </span>
</div>
`;

exports[`TextField snapshots renders multiline correctly with props affecting styling 1`] = `
<div
  className=
      ms-TextField
      ms-TextField--underlined
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        box-shadow: none;
        box-sizing: border-box;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
>
  <div
    className=
        ms-TextField-wrapper
        {
          border-bottom: 1px solid #a4262c;
          display: flex;
          width: 100%;
        }
        &:hover {
          border-bottom-color: #a4262c;
        }
        @media screen and (-ms-high-contrast: active){&:hover {
          border-bottom-color: Highlight;
        }
  >
    <label
      className=
          ms-Label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 600;
            height: 32px;
            line-height: 22px;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 8px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 12px;
            padding-right: 0px;
            padding-top: 5px;
            word-wrap: break-word;
          }
      htmlFor="TextField0"
      id="TextFieldLabel2"
    >
      Label
    </label>
    <div
      className=
          ms-TextField-fieldGroup
          {
            align-items: stretch;
            background: #ffffff;
            border-radius: 2px;
            border: none;
            box-shadow: none;
            box-sizing: border-box;
            cursor: text;
            display: flex;
            flex-direction: row;
            flex: 1 1 0px;
            height: 32px;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            padding-bottom: 0px;
            padding-left: 0px;
            padding-right: 0px;
            padding-top: 0px;
            position: relative;
            text-align: left;
          }
          &:hover {
            border-color: #323130;
          }
          @media screen and (-ms-high-contrast: active){&:hover {
            border-color: Highlight;
          }
    >
      <div
        className=
            ms-TextField-prefix
            {
              align-items: center;
              background: #f3f2f1;
              color: #605e5c;
              display: flex;
              flex-shrink: 0;
              line-height: 1px;
              padding-bottom: 0;
              padding-left: 10px;
              padding-right: 10px;
              padding-top: 0;
              white-space: nowrap;
            }
      >
        <span
          style={
            Object {
              "paddingBottom": "1px",
            }
          }
        >
          test prefix
        </span>
      </div>
      <input
        aria-describedby="TextFieldDescription1"
        aria-invalid={true}
        aria-labelledby="TextFieldLabel2"
        className=
            ms-TextField-field
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              background-color: transparent;
              background: none;
              border-radius: 0px;
              border: none;
              box-shadow: none;
              box-sizing: border-box;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              min-width: 0px;
              outline: 0px;
              padding-bottom: 0;
              padding-left: 8px;
              padding-right: 8px;
              padding-top: 0;
              text-align: left;
              text-overflow: ellipsis;
              width: 100%;
            }
            &:active {
              outline: 0px;
            }
            &:focus {
              outline: 0px;
            }
            &:hover {
              outline: 0px;
            }
            &::-ms-clear {
              display: none;
            }
            &::placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            &:-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            &::-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
        id="TextField0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        type="text"
        value=""
      />
      <div
        className=
            ms-TextField-suffix
            {
              align-items: center;
              background: #f3f2f1;
              color: #605e5c;
              display: flex;
              flex-shrink: 0;
              line-height: 1px;
              padding-bottom: 0;
              padding-left: 10px;
              padding-right: 10px;
              padding-top: 0;
              white-space: nowrap;
            }
      >
        <span
          style={
            Object {
              "paddingBottom": "1px",
            }
          }
        >
          test suffix
        </span>
      </div>
    </div>
  </div>
  <span
    id="TextFieldDescription1"
  >
    <div
      role="alert"
    />
  </span>
</div>
`;

exports[`TextField snapshots renders multiline resizable correctly 1`] = `
<div
  className=
      ms-TextField
      ms-TextField--multiline
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        box-shadow: none;
        box-sizing: border-box;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
>
  <div
    className=
        ms-TextField-wrapper

  >
    <label
      className=
          ms-Label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 600;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 0;
            padding-right: 0;
            padding-top: 5px;
            word-wrap: break-word;
          }
      htmlFor="TextField0"
      id="TextFieldLabel2"
    >
      Label
    </label>
    <div
      className=
          ms-TextField-fieldGroup
          {
            align-items: stretch;
            background: #ffffff;
            border-radius: 2px;
            border: 1px solid #8a8886;
            box-shadow: none;
            box-sizing: border-box;
            cursor: text;
            display: flex;
            flex-direction: row;
            height: auto;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            min-height: 60px;
            padding-bottom: 0px;
            padding-left: 0px;
            padding-right: 0px;
            padding-top: 0px;
            position: relative;
          }
          &:hover {
            border-color: #323130;
          }
          @media screen and (-ms-high-contrast: active){&:hover {
            border-color: Highlight;
          }
    >
      <textarea
        aria-invalid={false}
        aria-labelledby="TextFieldLabel2"
        className=
            ms-TextField-field
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              background-color: transparent;
              background: none;
              border-radius: 0px;
              border: none;
              box-shadow: none;
              box-sizing: border-box;
              color: #323130;
              flex-grow: 1;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              line-height: 17px;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              min-height: inherit;
              min-width: 0px;
              outline: 0px;
              overflow: auto;
              padding-bottom: 6px;
              padding-left: 8px;
              padding-right: 8px;
              padding-top: 6px;
              text-overflow: ellipsis;
              width: 100%;
            }
            &:active {
              outline: 0px;
            }
            &:focus {
              outline: 0px;
            }
            &:hover {
              outline: 0px;
            }
            &::-ms-clear {
              display: none;
            }
            &::placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            &:-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            &::-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
        id="TextField0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField snapshots renders multiline unresizable correctly 1`] = `
<div
  className=
      ms-TextField
      ms-TextField--multiline
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        box-shadow: none;
        box-sizing: border-box;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
>
  <div
    className=
        ms-TextField-wrapper

  >
    <label
      className=
          ms-Label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 600;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 0;
            padding-right: 0;
            padding-top: 5px;
            word-wrap: break-word;
          }
      htmlFor="TextField0"
      id="TextFieldLabel2"
    >
      Label
    </label>
    <div
      className=
          ms-TextField-fieldGroup
          {
            align-items: stretch;
            background: #ffffff;
            border-radius: 2px;
            border: 1px solid #8a8886;
            box-shadow: none;
            box-sizing: border-box;
            cursor: text;
            display: flex;
            flex-direction: row;
            height: auto;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            min-height: 60px;
            padding-bottom: 0px;
            padding-left: 0px;
            padding-right: 0px;
            padding-top: 0px;
            position: relative;
          }
          &:hover {
            border-color: #323130;
          }
          @media screen and (-ms-high-contrast: active){&:hover {
            border-color: Highlight;
          }
    >
      <textarea
        aria-invalid={false}
        aria-labelledby="TextFieldLabel2"
        className=
            ms-TextField-field
            ms-TextField--unresizable
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              background-color: transparent;
              background: none;
              border-radius: 0px;
              border: none;
              box-shadow: none;
              box-sizing: border-box;
              color: #323130;
              flex-grow: 1;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              line-height: 17px;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              min-height: inherit;
              min-width: 0px;
              outline: 0px;
              overflow: auto;
              padding-bottom: 6px;
              padding-left: 8px;
              padding-right: 8px;
              padding-top: 6px;
              resize: none;
              text-overflow: ellipsis;
              width: 100%;
            }
            &:active {
              outline: 0px;
            }
            &:focus {
              outline: 0px;
            }
            &:hover {
              outline: 0px;
            }
            &::-ms-clear {
              display: none;
            }
            &::placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            &:-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            &::-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
        id="TextField0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField snapshots renders multiline with placeholder correctly 1`] = `
<div
  className=
      ms-TextField
      ms-TextField--multiline
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        box-shadow: none;
        box-sizing: border-box;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
>
  <div
    className=
        ms-TextField-wrapper

  >
    <label
      className=
          ms-Label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 600;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 0;
            padding-right: 0;
            padding-top: 5px;
            word-wrap: break-word;
          }
      htmlFor="TextField0"
      id="TextFieldLabel2"
    >
      Label
    </label>
    <div
      className=
          ms-TextField-fieldGroup
          {
            align-items: stretch;
            background: #ffffff;
            border-radius: 2px;
            border: 1px solid #8a8886;
            box-shadow: none;
            box-sizing: border-box;
            cursor: text;
            display: flex;
            flex-direction: row;
            height: auto;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            min-height: 60px;
            padding-bottom: 0px;
            padding-left: 0px;
            padding-right: 0px;
            padding-top: 0px;
            position: relative;
          }
          &:hover {
            border-color: #323130;
          }
          @media screen and (-ms-high-contrast: active){&:hover {
            border-color: Highlight;
          }
    >
      <textarea
        aria-invalid={false}
        aria-labelledby="TextFieldLabel2"
        className=
            ms-TextField-field
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              background-color: transparent;
              background: none;
              border-radius: 0px;
              border: none;
              box-shadow: none;
              box-sizing: border-box;
              color: #323130;
              flex-grow: 1;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              line-height: 17px;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              min-height: inherit;
              min-width: 0px;
              outline: 0px;
              overflow: auto;
              padding-bottom: 6px;
              padding-left: 8px;
              padding-right: 8px;
              padding-top: 6px;
              text-overflow: ellipsis;
              width: 100%;
            }
            &:active {
              outline: 0px;
            }
            &:focus {
              outline: 0px;
            }
            &:hover {
              outline: 0px;
            }
            &::-ms-clear {
              display: none;
            }
            &::placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            &:-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            &::-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
        id="TextField0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        placeholder="test placeholder"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField snapshots should resepect user component and subcomponent styling 1`] = `
<div
  className=
      ms-TextField
      ms-TextField--underlined
      root-testClassName
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        box-shadow: none;
        box-sizing: border-box;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
      }
>
  <div
    className=
        ms-TextField-wrapper
        {
          border-bottom: 1px solid #a4262c;
          display: flex;
          width: 100%;
        }
        &:hover {
          border-bottom-color: #a4262c;
        }
        @media screen and (-ms-high-contrast: active){&:hover {
          border-bottom-color: Highlight;
        }
  >
    <label
      className=
          ms-Label
          label-testClassName
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 600;
            height: 32px;
            line-height: 22px;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 8px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 12px;
            padding-right: 0px;
            padding-top: 5px;
            word-wrap: break-word;
          }
      htmlFor="TextField0"
      id="TextFieldLabel2"
    >
      Label
    </label>
    <div
      className=
          ms-TextField-fieldGroup
          {
            align-items: stretch;
            background: #ffffff;
            border-radius: 2px;
            border: none;
            box-shadow: none;
            box-sizing: border-box;
            cursor: text;
            display: flex;
            flex-direction: row;
            flex: 1 1 0px;
            height: 32px;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            padding-bottom: 0px;
            padding-left: 0px;
            padding-right: 0px;
            padding-top: 0px;
            position: relative;
            text-align: left;
          }
          &:hover {
            border-color: #323130;
          }
          @media screen and (-ms-high-contrast: active){&:hover {
            border-color: Highlight;
          }
    >
      <div
        className=
            ms-TextField-prefix
            {
              align-items: center;
              background: #f3f2f1;
              color: #605e5c;
              display: flex;
              flex-shrink: 0;
              line-height: 1px;
              padding-bottom: 0;
              padding-left: 10px;
              padding-right: 10px;
              padding-top: 0;
              white-space: nowrap;
            }
      >
        <span
          style={
            Object {
              "paddingBottom": "1px",
            }
          }
        >
          test prefix
        </span>
      </div>
      <input
        aria-describedby="TextFieldDescription1"
        aria-invalid={true}
        aria-labelledby="TextFieldLabel2"
        className=
            ms-TextField-field
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              background-color: transparent;
              background: none;
              border-radius: 0px;
              border: none;
              box-shadow: none;
              box-sizing: border-box;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              margin-bottom: 0px;
              margin-left: 0px;
              margin-right: 0px;
              margin-top: 0px;
              min-width: 0px;
              outline: 0px;
              padding-bottom: 0;
              padding-left: 8px;
              padding-right: 8px;
              padding-top: 0;
              text-align: left;
              text-overflow: ellipsis;
              width: 100%;
            }
            &:active {
              outline: 0px;
            }
            &:focus {
              outline: 0px;
            }
            &:hover {
              outline: 0px;
            }
            &::-ms-clear {
              display: none;
            }
            &::placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            &:-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            &::-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
        id="TextField0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        type="text"
        value=""
      />
      <div
        className=
            ms-TextField-suffix
            {
              align-items: center;
              background: #f3f2f1;
              color: #605e5c;
              display: flex;
              flex-shrink: 0;
              line-height: 1px;
              padding-bottom: 0;
              padding-left: 10px;
              padding-right: 10px;
              padding-top: 0;
              white-space: nowrap;
            }
      >
        <span
          style={
            Object {
              "paddingBottom": "1px",
            }
          }
        >
          test suffix
        </span>
      </div>
    </div>
  </div>
  <span
    id="TextFieldDescription1"
  >
    <div
      role="alert"
    />
  </span>
</div>
`;
